refactor(broker): replace deprecated method
Replaces deprecated method usage of `#newInstance()` for
`getDeclaredConstructor().newInstance`, as recommended by the javadoc.

(cherry picked from commit e63b499c67f25ce9cdb2c58959bfb3753f76969e)